--- a/项目随笔.md
+++ b/项目随笔.md
@@ -31,3 +31,7 @@ Condition类的设计。
 写个echo Server多线程试验一下,能够成功就说明大致的设计流程都没有问题了，剩下的就是一些细节的考虑。
 # 项目ing
 &emsp;2019.4.26 跟我参考的几位github上的网络库比,我自己这个实在时low到不行,还有很多很多要做的功能,现在想po上来只是因为他终于能运行了(捂脸)。
+最后贴上我参考的两位github:(其实基本就是抄的)
+1. https://github.com/chenshuaihao/NetServer
+2. https://github.com/linyacool/WebServer
+后者的功能更加复杂,是我最终想要写出来的样子。
